src/app/shared/components/template/components/layout/accordion.scss
@import "../../../../../../theme/variables.scss";
@import "../../../../../../theme/mixins.scss";
.workshops-accordion {
  position: relative;
  margin-top: var(--large-margin);
  &::after {
    content: "";
    width: 1px;
    height: calc(100% - 35px);
    background: var(--ion-color-primary);
    position: absolute;
    left: 21px;
    top: 0;
    margin-top: var(--regular-margin);
  }
}
.accordion-wrapper {
  display: flex;
  justify-content: space-between;
  // align-items: center; // aligns dot in center while closed but open will connecting line looks off
  margin-bottom: var(--regular-margin);
  height: 100%;
  .accordion-status {
    @include medium-square;
    border-radius: var(--ion-border-radius-rounded);
    border: var(--ion-border-thin-standard);
    padding: var(--tiny-padding);
    background: var(--ion-color-primary-contrast);
    display: flex;
    justify-content: center;
    z-index: 2;
    &.inProgress {
      background: var(--ion-accordion-bg);
    }
    &.disabled {
      background: var(--ion-color-primary-contrast);
    }
    &.completed {
      background: var(--ion-accordion-bg);
    }
  }
  .accordion-section {
    display: flex;
    flex-direction: column;
    position: relative;
    width: var(--accordion-section-width);
    border-radius: var(--ion-border-radius-standard);
    overflow: hidden;
    padding: var(--accordion-section-padding);
    border: var(--ion-border-thin-standard);
    transition: max-height 0.4s;
    overflow-y: hidden;
    &.completed {
      background: var(--ion-accordion-bg);
      color: var(--ion-color-primary);
      .progress {
        opacity: 0;
      }
    }
    &.disabled {
      background: var(--ion-color-primary-contrast);
      color: var(--ion-color-primary);
      .progress {
        opacity: 0;
      }
    }
    &.inProgress {
      background: var(--ion-color-primary-contrast);
      color: var(--ion-color-primary);
    }
    &.openSection {
      max-height: var(--accordion-section-open-height) !important;
      background: var(--ion-accordion-bg);
      transition: max-height 0.4s;
      .progress {
        opacity: 0;
        transition: none !important;
      }
    }
    .progress {
      position: absolute;
      height: 100%;
      left: 0;
      z-index: 1;
      background: var(--ion-accordion-bg);
      opacity: 1;
      transition: opacity 0.4s ease-in;
    }
  }
  .accordion-section-content {
    max-height: 0;
    transition: max-height 0.4s;
    &.openSection {
      max-height: var(--accordion-section-open-height);
    }
  }
}

